@@ -1,3 +1,14 @@
+2021-05-03  Alex Christensen  <achristensen@webkit.org>
+
+        WKWebView: WKURLSchemeHandler request don't have Range headers for custom scheme videos
+        https://bugs.webkit.org/show_bug.cgi?id=203302
+        <rdar://63750321>
+
+        Reviewed by Jer Noble and Geoff Garen.
+
+        * platform/graphics/avfoundation/objc/WebCoreAVFResourceLoader.mm:
+        (WebCore::WebCoreAVFResourceLoader::startLoading):
+
 2021-05-03  Aditya Keerthi  <akeerthi@apple.com>
 
         [iOS][FCR] Missing fill color on slider ticks
